Mon Feb 16 02:16:33 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* bcc32/Makefile.sub: should warn suspicious pointer conversion.

	* bcc32/setup.mak: ditto.

Sun Feb 15 19:06:42 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/rinda/tuplespace.rb: TupleSpace#read(tpl, 0), raise
	  RequestExpiredError if not found.

Sun Feb 15 15:56:46 2004  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: add IDispatch wrapper in val2variant.
	  Thanks, arton.

Sun Feb 15 01:46:05 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/mkmf.rb: absolute path of ruby is assigned to $(RUBY).
	  [ruby-dev:22870]

Sat Feb 14 11:29:41 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* sample/drb/*: import lib/drb/sample

Sat Feb 14 11:08:23 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb: add pretty_print, thanks gotoken.

Fri Feb 13 12:35:08 2004  Minero Aoki  <aamine@loveruby.net>

	* test/fileutils/test_fileutils.rb: File.link may raise EINVAL and
	  EACCES on Windows.

Thu Feb 12 21:45:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/ftools.rb: documented

Thu Feb 12 21:25:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/base64.rb: backported from HEAD (modularised and documented)

Thu Feb 12 20:31:48 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_tmpsrc): cpp32 of Borland C++ ignores #error
	  directives in DOS line-ending files at all.

Thu Feb 12 02:23:56 2004  Tanaka Akira  <akr@m17n.org>

	* lib/pathname.rb: use assert_raise instead of assert_raises.

	* lib/pp.rb: ditto.

	* lib/time.rb: ditto.

	* lib/tsort.rb: ditto.
	  use TSortHash and TSortArray instead of Hash and Array in test.

Wed Feb 11 20:01:12 2004  akira yamada  <akira@ruby-lang.org>

	* test/ruby/test_file.rb (TestFile::test_fnmatch): added tests for
	  File.fnmatch. [ruby-dev:22815][ruby-dev:22819]

	* test/ruby/test_proc.rb (TestProc::test_eq): added a
	  test.  [ruby-dev:22599]
